# godot-csfxr

./: .gitignore  .lvimrc  LICENSE  README.md  build  meson.build
include/: csfxr.h  sfxr.h
src/: csfxr.c  sfxr.c
src/examples/: basic.c
